<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:padding="20dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:inputType="textCapSentences"
                    android:id="@+id/sms_group_name_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Enter Group Name"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Incoming SMS Numbers"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:background="@drawable/gray_border_bg"
                android:minHeight="50dp"
                android:padding="10dp">

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/sms_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:alignContent="stretch"
                    app:alignItems="stretch"
                    app:flexWrap="wrap" />

            </FrameLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_sms_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_add"
                app:fabSize="mini" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:rotation="90"
                android:src="@drawable/ic_fast_forward" />


            <TextView
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Forward SMS Numbers"
                android:textSize="17sp" />


            <FrameLayout
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:background="@drawable/gray_border_bg"
                android:minHeight="50dp"
                android:padding="10dp">

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/phone_no_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:alignContent="stretch"
                    app:alignItems="stretch"
                    app:flexWrap="wrap" />

            </FrameLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_ph_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_add"
                app:fabSize="mini" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="right">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_btn"
                    style="@style/Widget.App.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="cancel" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_btn"
                    style="@style/Widget.App.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="save" />


            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>